notification integration and kafka event for product
